# overlord

./: .gitignore  Makefile  README.md  build.gradle.kts  gradle.properties  package.json  run.js  settings.gradle  settings.gradle.kts
app/: .firebaserc  .gitignore  README.md  build.gradle  firebase.json  index.android.js  package-lock.json  package.json  react-native.config.js  settings.gradle
app/app/: build.gradle  credentials.json  google-services.json  proguard-rules.pro
app/chat/: build.gradle
app/core-debug/: core-debug.aar
app/docs/: index.html  (+1 more)
common/: .gitignore  settings.gradle.kts
core/: build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
cpp/: .gitignore  CMakeLists.txt  README.md  settings.gradle.kts
cpp/app/: build.gradle.kts
cpp/app/src/main/cpp/: app.cpp  functional_vector.cpp
cpp/app/src/main/headers/: HashMap.hpp  app.h  app.hpp  base.hpp  print.hpp  var_int.hpp  vector_stream.hpp
cpp/app/src/test/cpp/: app_test.cpp
cpp/code/include/: Map.hpp  app.hpp  base.hpp  matrix.hpp  print.hpp  range.hpp  stream.hpp  threading.hpp  vector_utils.hpp
cpp/code/include/linear_algebra/: elementary.hpp
cpp/code/src/: app.cpp
cpp/docs/: README.html
kclient/: build.gradle.kts  settings.gradle.kts
ktorfit/: build.gradle.kts
listenSQL/: KTOR.md  README.md  build.gradle.kts  settings.gradle.kts
pravega/: build.gradle.kts  settings.gradle.kts
react/: App.tsx  app.json  package-lock.json  package.json
server/: .gitignore  build.gradle.kts
untitled/: CMakeLists.txt
website/: package-lock.json  package.json
(+422 files in other folders)
